fix close x on mobile menu & renamed it to home

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ p {
 
 .close_btn {
   margin-left: 6%;
-  margin-top: -15px;
+  margin-top: 1px;
 }
 
 .top-bar-icon {
